...
    android:nestedScrollingEnabled="true"
    android:id = "@+id/profileLinear"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_marginRight="30dp"
...
                android:layout_marginLeft="10dp"
                android:text="UserName"
                android:textColor="@color/crimson"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/usernameEditText"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:text=""
                android:textColor="@color/black"
                android:textSize="15sp" />
...
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:padding="5dp"
                android:text="Password: "
                android:textColor="@color/crimson"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="wrap_content"
...
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_below="@id/profileRole"
            android:layout_height="match_parent">
        <Button
            android:id="@+id/updateButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
...

    </RelativeLayout>
</LinearLayout>
</ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_gravity="bottom"
        android:background="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
