...
        android:title="My Courses"
        android:icon="@drawable/enrolled" />
    <item android:id="@+id/classes"
        android:title="Classes"
        android:icon="@drawable/classes" />
    <item android:id="@+id/profile"
        android:title="Profile"
        android:icon="@drawable/user" />
</menu>
