<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- course_item.xml -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id = "@+id/a"
        android:padding="8dp">

        <TextView
            android:id="@+id/courseNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:layout_weight="1"
            android:textColor="#000"
            android:text="Course Name" />


        <Button
            android:id="@+id/toggleButton"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_weight="0"
            android:background="@color/yellow"
            android:text="+"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="10dp" />

    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/a">

            <TextView
                android:id="@+id/reviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12dp"
                android:textColor="#000"
                android:layout_gravity="start"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:visibility="gone"
                android:text="See Reviews" />

            <TextView
                android:id="@+id/roster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:text="See Roster"
                android:textColor="#000"
                android:textSize="12dp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/courseEnrollmentTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Enrolled:"
                android:layout_weight="0"
                android:textColor="#000"
                android:textSize="12dp"
                android:visibility="gone" />

            <Button
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:textAllCaps="false"
                android:id = "@+id/enrollBtn"
                android:visibility="gone"
                android:layout_weight="0"
                android:textSize="12dp"
                android:layout_marginLeft="20dp"
                android:layout_gravity="end" />
        </LinearLayout>

    </RelativeLayout>


</RelativeLayout>
